--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  pcl_ros
   moveit_core
   moveit_ros_planning
   moveit_ros_planning_interface
@@ -60,11 +61,13 @@ find_package(Boost REQUIRED COMPONENTS system)
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  AddCollisionBox.srv
+  AddCollisionPlane.srv
+  AddOccupancyGrid.srv
+  PlanningSceneControl.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -74,10 +77,12 @@ find_package(Boost REQUIRED COMPONENTS system)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs  # Or other packages containing msgs
+  geometry_msgs
+  sensor_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -140,6 +145,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(move_up src/move_up.cpp)
+add_executable(move_group_server src/move_group_server.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -150,9 +156,13 @@ add_executable(move_up src/move_up.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(move_up ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(move_group_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(move_up
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(move_group_server
   ${catkin_LIBRARIES}
 )
 
