feat: opens door

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ add_service_files(
   AddCollisionBox.srv
   AddOccupancyGrid.srv
   PlanningSceneControl.srv
+  Pick.srv
+  Move.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -113,7 +115,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-# INCLUDE_DIRS include
+INCLUDE_DIRS include
 # LIBRARIES jeff_moveit
 # CATKIN_DEPENDS roscpp rospy
 # DEPENDS system_lib
@@ -126,7 +128,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -144,7 +146,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(move_up src/move_up.cpp)
-add_executable(move_group_server src/move_group_server.cpp)
+add_executable(move_group_server src/move_group_server.cpp src/simple_grasps.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
